<resources>
    <string name="app_name">TerraConnection</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_headline">Reset your password</string>
    <string name="forgot_password_subtitle">Enter your registered email address and we\'ll send you a verification code.</string>
    <string name="forgot_password_email_hint">Email address</string>
    <string name="forgot_password_send_code">Send verification code</string>
    <string name="forgot_password_code_hint">6-digit verification code</string>
    <string name="forgot_password_verify_code">Verify code</string>
    <string name="forgot_password_resend">Resend code</string>
    <string name="forgot_password_new_password_hint">New password</string>
    <string name="forgot_password_confirm_password_hint">Confirm new password</string>
    <string name="forgot_password_reset_button">Reset password</string>
    <string name="forgot_password_code_sent_masked">We\'ve sent a code to %1$s.</string>
    <string name="forgot_password_verify_success">Code verified. Enter a new password.</string>
    <string name="forgot_password_reset_success">Your password has been reset.</string>
    <string name="forgot_password_invalid_email">Enter a valid email address.</string>
    <string name="forgot_password_password_mismatch">Passwords do not match.</string>
    <string name="forgot_password_code_expires_in">Code expires in %1$02d:%2$02d</string>
    <string name="forgot_password_invalid_code">Enter the 6-digit code sent to your email.</string>
    <string name="forgot_password_code_expired">Verification code expired. Request a new one.</string>
    <string name="forgot_password_account_not_found">Account does not exist.</string>
    <string name="forgot_password_back_button">Back to login</string>
    <string name="guardian_multiple_entry_exit_title">Unusual activity for %1$s</string>
    <string name="guardian_multiple_entry_exit_body">%1$s has %2$d entries and %3$d exits today. Please check in.</string>
</resources>
